package tronol.protobuf;

option java_package = "ca.zihao.tronol.protobuf";
option java_outer_classname = "TronProtos";

message AccountCommand {
	enum CommandType {
		REGISTER = 0;
		LOGIN = 1;
		EDIT = 2;
	}

	required CommandType type = 1;
	required string username = 2;
	optional string password = 3;
	optional string nickname = 4;
	optional string token = 5;
}

message AccountResponse {
	enum ResponseType {
		SUCCESS = 0;
		INVALID_USERNAME = 1;
		INVALID_PASSWORD = 2;
		INVALID_TOKEN = 3;
	}

	required ResponseType type = 1;
	optional string token = 2;
}

message RoomCommand {
	enum CommandType {
		CREATE = 0;
		EDIT = 1;
		LIST = 2;
		ENTER = 3;
		LEAVE = 4;
	}

	required CommandType type = 1;
	optional int32 id = 2;
	optional string name = 3;
	optional int32 wins = 4;
}

message RoomResponse {
	enum ResponseType {
		SUCCESS = 0;
		INVALID_ROOM = 1;
	}

	message RoomInfo {

		required int32 id = 1;
		required string name = 2;
		optional string host = 3;
		optional string status = 4;
	}

	required ResponseType type = 1;
	optional int32 id = 2;
	repeated RoomInfo room = 3; 
}

message GameCommand {
	enum CommandType {
		ROOM = 0;
		GAME = 1;
		START = 2;
		QUIT = 3;
	}

	required CommandType type = 1;
	optional int32 tick = 2;
	repeated int32 dir = 3;
}

message GameResponse {
	enum ResponseType {
		SUCCESS = 0;
		ERROR = 1;
		ROOM = 2;
		GAME = 3;
		OVER = 4;
	}

	message GameSet {
		required int32 x = 1;
		required int32 y = 2;
		required int32 v = 3;
	}

	required ResponseType type = 1;
	repeated GameSet set_at = 2;
	repeated string users = 3;
	optional int32 tick = 4;
	optional string winner = 5;
}

message Command {
	enum CommandType {
		ACCOUNT = 0;
		ROOM = 1;
		GAME = 2;
	}
	
	required CommandType type = 1;
	optional AccountCommand account = 2;
	optional RoomCommand room = 3;
	optional GameCommand game = 4;
}

message Response {
	enum ResponseType {
		ACCOUNT = 0;
		ROOM = 1;
		GAME = 2;
	}

	required ResponseType type = 1;
	optional AccountResponse account = 2;
	optional RoomResponse room = 3;
	optional GameResponse game = 4;
}

